# intersynth

./: .gitignore  README.md
Z_LegacyTools/Z_SynthCode/synthaflodid/: Makefile  libtool
Z_LegacyTools/Z_SynthCode/synthaflodid/synthar/: create_objects.h  daudasynthinn.cpp  daudasynthinn_music.cpp  daudasynthinn_music.h  daudasynthinn_ui.cpp  daudasynthinn_ui.h  helpers_graphics.cpp  helpers_graphics.h  helpers_midi.cpp  helpers_midi.h  knocktunal.cpp  knocktunal_midi.cpp  knocktunal_midi.h  notes.cpp  notes.h  patch.cpp  patch.h  synthlaus.cpp
Z_LegacyTools/freeglut/lib/pkgconfig/: freeglut.pc
Z_LegacyTools/portaudio/lib/cmake/portaudio/: portaudioTargets-debug.cmake
Z_LegacyTools/portaudio/lib/pkgconfig/: portaudio-2.0.pc
Z_LegacyTools/rtmidi/lib/pkgconfig/: rtmidi.pc
Z_LegacyTools/rtmidi/share/rtmidi/: RtMidiConfig.cmake  RtMidiTargets-noconfig.cmake  RtMidiTargets.cmake
intersnyth_midi/: CMakeLists.txt  READme.txt  floating_fix.c  intersynth.c  intersynth.h  main.c
intersnyth_midi/include/: messages.h
intersnyth_midi/src/: intersynth.c
intersynth_bluetooth/: CMakeLists.txt  DOC.md  main.c
intersynth_bluetooth/include/: bluetooth.h  error.h  intersynth.h  messages.h
intersynth_bluetooth/platform/: CMakeLists.txt
intersynth_bluetooth/platform/linux/: bluetooth_linux.c  bluetooth_linux.h
intersynth_bluetooth/platform/windows/: bluetooth_win.c  bluetooth_win.h
intersynth_bluetooth/scripts_bluez/: client.c  messages.c  messages.h  scanner.c  server.c  test.c
intersynth_bluetooth/src/: bluetooth.c  error.c  intersynth.c  messages.c
intersynth_bluetooth/testing_linux/: testing_linux.py  wifi_latency.c
intersynth_bluetooth/testing_rpi/: testing_rpi.py
intersynth_bluetooth/testing_rpi/bluetooth_testing/: Makefile  btserver_float.c  btserver_latency.c  messages.c  messages.h  monitor.c  monitor.h
intersynth_bluetooth/testing_rpi/data/: DATA_BT_HOLL.csv  DATA_BT_SOL.csv  DATA_WIFI_HOLL.csv  DATA_WIFI_SOL.csv
intersynth_bluetooth/testing_rpi/wifi_testing/: Makefile  wifi_latency.c
intersynth_bluetooth/testing_win/: testing_win.py  wifi_test_win.c
project_description/: API_description.txt  InterSynth_project_description.txt  MIDI_quick_fix.txt  SerialListener.h
